@@ -1,3 +1,9 @@
+Fri May 30 13:04:00 UTC 2008  Simon Massey <sma@prismtech.com>
+
+        * orbsvcs/tests/unit/Notify/MC/Statistic/Statistic.cpp:
+        
+          And again! Corrected for unsigned integer (size_t) ambiguity errors.
+
 Wed May 28 14:00:00 UTC 2008  Simon Massey <sma@prismtech.com>
 
         * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:
